--- a/Stopwatch/style.css
+++ b/Stopwatch/style.css
@@ -24,8 +24,8 @@ body{
     color: white;
     margin: 200px auto 0;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
-
 .stopwatch h1{
     margin-top: 60px;
     font-size: 64px;
