--- a/from validation/style.css
+++ b/from validation/style.css
@@ -61,3 +61,19 @@
     color: #333;
     font-size: 16px;
 }
+
+::placeholder{
+    font-size: 14px;
+}
+
+form button{
+    background: #141a34;
+    color: #fff;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    padding: 10px 40px;
+    outline: 0;
+    cursor: pointer;
+    display: block;
+    margin: 30px auto 10px;
+}
