updated form validation

--- a/from validation/style.css
+++ b/from validation/style.css
@@ -77,3 +77,18 @@ form button{
     display: block;
     margin: 30px auto 10px;
 }
+
+.input-group span{
+    position:absolute;
+    bottom: 12px;
+    right: 17px;
+    font-size: 14px;
+    color: red;
+}
+
+#submit-error{
+    display: flex;
+    color: red;
+    align-items: center;
+    justify-content: center;
+}
