--- a/image_carousel/style.css
+++ b/image_carousel/style.css
@@ -1,29 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap');
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "TikTok Sans", sans-serif;
 }
 
-body{
-    background:#191919;
+body {
+    background: #191919;
 }
 
-.gallery{
-    width: 900px;
+.gallery-wrap {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
+    max-width: 100%;
+    overflow: hidden;
 }
 
-.gallery div{
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 20px;
+.gallery {
+    display: flex;
+    gap: 40px;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    width: 900px;
     padding: 10px;
 }
 
-.gallery div img{
+.gallery-slide {
+    display: flex;
+    gap: 20px;
+    flex: none;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
+
+.gallery-slide img {
+    width: 280px;
+    height: 390px;
+    object-fit: cover;
+    border-radius: 10px;
+    filter: grayscale(100%);
+    transition: transform 0.5s, filter 0.5s;
+}
+
+.gallery-slide img:hover {
+    filter: grayscale(0);
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.gallery::-webkit-scrollbar {
+    display: none;
+}
+
+#backBtn,
+#nextBtn {
+    font-size: 50px;
+    cursor: pointer;
+    color: #ff9d4d;
+    user-select: none;
+    padding: 0 20px;
+}
+
+#backBtn:active,#nextBtn:active{
+    transform: scale(0.9);
+    filter: drop-shadow(0 0 20px rgb(255, 166, 0));
+}
+
+.txt1, .txt2
