--- a/image_carousel/style.css
+++ b/image_carousel/style.css
@@ -87,6 +87,8 @@ body {
 }
 
 .lumina{
-    filter: drop-shadow(1px 0px 4px rgb(0, 255, 251));
+    filter: drop-shadow(0 0 4px rgb(0, 255, 251)) 
+            drop-shadow(0 0 8px rgb(0, 255, 251));
     transition: 0.2s ease-in-out;
+
 }
