--- a/image_carousel/style.css
+++ b/image_carousel/style.css
@@ -74,6 +74,7 @@ body {
     gap: 15px;
     align-items: center;
     justify-content: center;
+    filter: drop-shadow(0 0 4px rgb(0, 255, 251));
 }
 
 .txt1, .txt2{
@@ -88,6 +89,7 @@ body {
 
 .lumina{
     filter: drop-shadow(0 0 4px rgb(0, 255, 251)) 
+            drop-shadow(0 0 8px rgb(0, 255, 251))
             drop-shadow(0 0 8px rgb(0, 255, 251));
     transition: 0.2s ease-in-out;
 
