--- a/image_carousel/style.css
+++ b/image_carousel/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "TikTok Sans", sans-serif;
+    font-family: "Share Tech Mono", sans-serif;
 }
 
 body {
