--- a/email-subscription/style.css
+++ b/email-subscription/style.css
@@ -6,3 +6,65 @@
     font-family: "Stack Sans Notch", sans-serif;
     box-sizing: border-box;
 }
+
+.hero{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(205, 247, 179, 0.8),rgba(0, 0, 0, 0.697)), url(./img/pexels-leah-newhouse-50725-325521.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 10px 10%;
+    color: #fff;
+}
+
+.hero h3{
+    margin-top: 15%;
+    font-weight: 400;
+    font-size: 30px;
+}
+
+.hero h1{
+    margin-top: 30px;
+    font-size: 50px;
+}
+
+.hero p {
+    margin: 10px 0 50px;
+}
+
+form{
+    background: #fff;
+    display: flex;
+    width: fit-content;
+    border-radius: 10px;
+}
+
+form input{
+    border: 0;
+    outline: none;
+    padding: 10px 20px;
+    height: 70px;
+    width: 400px;
+    font-size: 16px;
+    border-radius: 10px;
+    
+}
+
+form button{
+    background: #61b752;
+    border: none;
+    outline: none;
+    height: 70px;
+    width: 100px;
+    cursor: pointer;
+    border-radius: 10px;
+    scale: 0.9;
+    filter: drop-shadow(1px 1px 15px rgb(132, 255, 132));
+}
+
+form button:active{
+    scale: 0.8;
+    border-radius: 10px;
+    display: run-in;
+    filter: drop-shadow(1px 1px 30px rgb(26, 255, 26));
+}
