--- a/Password Strength/style.css
+++ b/Password Strength/style.css
@@ -18,6 +18,7 @@
     max-width: 90%;
     position: relative;
     /* background-color: red; */
+    filter: drop-shadow(1px 1px 5px white);
 }
 
 .input-box input{
@@ -28,6 +29,7 @@
     outline: none;
     color: #fff;
     background: transparent;
+    border-radius: 10px;
 }
 
 button {
@@ -38,11 +40,18 @@ button {
     border-radius: 10%;
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 40%;
     transform: translateY(-50%);
     right: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button:active{
+    scale: 0.9;
 }
 
 #msg {
-    color: white;
+    color:white ;
 }
